# shellDSL

./: .travis.yml  README.md  plans.md  shellDSL.cabal
examples/: demo.hs  example1.hs
src/: Shell.hs
src/Shell/: Analysis.hs  Bash.hs  Diagnostic.hs  Internal.hs  Optimize.hs  Render.hs
src/Shell/Formatter/: Base.hs  Bash.hs  POSIX.hs
tests/: Main.hs  test1.hs
tests/inputs/: EscapeAmp.hs  EscapeAmp.hs.expected  GlobInString.hs  GlobInString.hs.expected  GlobWorks.hs  GlobWorks.hs.expected  LiteralWithEnvVar.hs  LiteralWithEnvVar.hs.expected  Trivial.hs  Trivial.hs.expected
