name:                shellDSL
version:             0.1.0.0
synopsis:            A shell generation DSL
-- description:
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: Shell,
                   Shell.Formatter.Bash,
                   Shell.Formatter.Base,
                   Shell.Internal,
                   Shell.Optimize,
                   Shell.Render
  -- other-modules:
  build-depends:  base == 4.*,
                  containers,
                  mtl,
                  transformers,
                  mainland-pretty >= 0.2 && < 0.3,
                  concurrent-supply,
                  free >= 4 && < 5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable test1
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: shellDSL,
                 base == 4.*
  hs-source-dirs: tests
  main-is: test1.hs