name:                shellDSL
version:             0.1.0.0
synopsis:            A shell generation DSL
license:             BSD3
license-file:        LICENSE
author:              Tristan Ravitch
maintainer:          tristan@nochair.net
category:            System
build-type:          Simple
cabal-version:       >=1.10
description: A safe DSL for generating shell scripts.  It supports output to multiple shell targets.

extra-source-files: README.md
data-files: README.md

library
  exposed-modules: Shell,
                   Shell.Analysis,
                   Shell.Diagnostic,
                   Shell.Formatter.Bash,
                   Shell.Formatter.Base,
                   Shell.Formatter.POSIX,
                   Shell.Internal,
                   Shell.Optimize,
                   Shell.Render,
                   Paths_shellDSL
  build-depends:  base == 4.*,
                  containers,
                  mtl,
                  transformers,
                  pcre-light >= 0.4 && < 0.5,
                  mainland-pretty >= 0.2 && < 0.3,
                  concurrent-supply >= 0.1 && < 0.2,
                  free >= 4.9 && < 5
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable example1
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: shellDSL,
                 base == 4.*
  hs-source-dirs: examples
  main-is: example1.hs

test-suite tests
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: shellDSL,
                 base == 4.*,
                 transformers,
                 filemanip,
                 filepath,
                 process,
                 directory,
                 hint >= 0.4 && < 0.5,
                 tasty >= 0.8 && < 0.11,
                 tasty-hunit >= 0.9 && < 0.10